2006-07-10  Jason Clinton  <me@jasonclinton.com>

	* NEWS:
	* configure.in: 2.15.4

2006-07-10  Andreas Røsdal <andrearo@stud.ntnu.no>

	* README: Updated.

2006-07-08  Dennis Cranston  <dennis_cranston@yahoo.com>

	* aisleriot/menu.c:
	* blackjack/src/blackjack.cpp:
	* gnobots2/menu.c:
	* mahjongg/mahjongg.c: Add tooltips to toolbar buttons.

2006-06-21  Andreas Røsdal <andrearo@stud.ntnu.no>

	* MAINTAINERS: Updated.

2006-06-15  Richard Hoelscher <rah@rahga.com>

	* TODO: Cleanup, including plans for gnotski color mode. Color theory
	says 10 colors is too impractical, espcially on RGB monitors.
	* NEWS: Drop refernces to old versions and gnome-stones, cleanup.

2006-06-12  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS:
	* configure.in: 2.15.3

2006-05-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Bump the intltool version requirement to a number
	which all intltool macros packages can recognise.

2006-05-15  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS:
	* configure.in: 2.15.2

2006-05-11  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Also depend on avahi-glib to pull in all the right
	libs. Make the version a variable.

2006-04-24  Callum McKenzie  <callum@spooky-possum.org>

	* NEWS:
	* configure.in: 2.15.1

2006-04-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Yet another patch from Przemysław Grzegorczyk
	to fix up the ALL_LINGUAS mess as per the new guidelines. (Bug
	#337889.)

2006-04-11  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: Patch from Przemysław Grzegorczyk to
	effectively move the ALL_LINGUAS variable into the po directory.

2006-04-10 Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-04-02  Callum McKenzie  <callum@spooky-possum.org>

	* Makefile.am: Update the icon cache once after everything is
	installed.

2006-03-26  Tommi Vainikainen  <thv@iki.fi>
