@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Mines
-_Comment=Clear mines from a minefield
+_Comment=Clear hidden mines from a minefield
 Exec=gnomine
 Icon=gnome-gnomine
 Terminal=false
