@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Tetravex
-_Comment=Play a puzzle game matching tiles together
+_Comment=Complete the puzzle by matching numbered tiles
 Exec=gnotravex
 Icon=gnome-tetravex
 Terminal=false
