@@ -1,3 +1,15 @@
+2006-07-18  Jason Clinton <me@jasonclinton.com>
+
+	* gataxx/gataxx.desktop.in:
+	* gnect/data/gnetc.desktop.in:
+	* iagno/iagno.desktop.in:
+	* gnotski/gnotski.desktop.in:
+	* gnomine/gnomine.desktop.in
+	* same-gnome/same-gnome.desktop.in
+	* gtali/gtali.desktop.in:
+	* gnotravex/tetravex.desktop.in: Updated usability descriptions.
+	closes #341617
+
 2006-07-10  Jason Clinton  <me@jasonclinton.com>
 
 	* NEWS:
